# tauri-with-python-and-react-example

./: .prettierignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: tauri-release.yml
src/: App.tsx
src-python/: pyproject.toml
src-python/src_python/: pyinstaller.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
