[tool.poetry]
name = "src-python"
version = "0.1.0"
description = ""
authors = ["Ouvill <contact@ouvill.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[tool.poetry.scripts]
build = "src_python.pyinstaller:build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
